[package]
name = "wasm_sprites"
version = "0.1.0"
authors = ["user <user@user.user>"]
edition = "2018"
description = "TODO"
repository = "TODO"
license = "TODO"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.55"
js-sys = "0.3.32"

[dependencies.web-sys]
version = "0.3.32"
features = [
  'Window',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlProgram',
  'WebGlUniformLocation',
  'WebGlBuffer',
  'console',
]